# Mini-Curso-ENUCOMPI-ERCEMAP-2024

./: LICENSE  Makefile  README.md  count.json  frames.json  main.py  output.json  output1.json  output2.json  pyproject.toml  pytest.ini  requirements.txt  test.py
docs/: arc.drawio  arch.md  developer.md  ideia.md
docs/diagrams/: backend-flow.drawio
docs/source/: conf.py  controllers.rst  index.rst  models.rst  src.controllers.rst  src.models.rst  src.rst  src.views.rst  src.views.templates.rst  usage.rst  views.rst  views.templates.rst
images/: readme.txt
sounds/: readme.txt
src/: __init__.py
src/controllers/: __init__.py  apply.py  frames.py  save.py
src/controllers/funcs/: __init__.py
src/models/: __init__.py  classes.py  configs.py  detect_model.py  frames.py  results.py
src/views/: __init__.py  loading_screen.py  results_screen.py  video_screen.py  welcome_screen.py
src/views/animations/: __init__.py
src/views/colors/: __init__.py
src/views/components/: __init__.py
src/views/fonts/: __init__.py
src/views/scripts/: __init__.py
src/views/templates/: __init__.py  loading_screen.py  results_screen.py  video_screen.py
tests/: __init__.py  conftest.py  test.json  test_counting.py  test_features.py  test_predict.py  test_tracker.py
tests/manual/: anality_one_frame.py  generate_video.py  generate_video_src.py  get_video.py  teste.json  teste1.json  teste2.json  teste3.json  track_object.py  track_object_src.py  track_thread.py  track_thread_gpt.py  video2json.py  yolo_video_result.py
