[tool.poetry]
name = "animal counting in videos"
version = "0.1.0"
description = "Um software para realizar a contagem de animais em vídeos usando Python"
authors = ["Mauricio Benjamin <mauriciobenjamin700@gmail.com>"]
license = "LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.29"
customtkinter = "^5.2.2"
opencv-python = "^4.10.0.82"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

